Fix colorpicker not operable on mobile screen

--- a/apps/website/src/app/main/navigationbar/navigationbar.component.scss
+++ b/apps/website/src/app/main/navigationbar/navigationbar.component.scss
@@ -44,7 +44,7 @@
   }
 
   .colorpicker {
-    height: 175px;
+    @apply tw-h-[275px] md:tw-h-[175px];
   }
 
   .active {
